# asterisk-ari-curl

./: CMakeLists.txt  README.md
include/: ari_utils.h
src/: ari_utils.cpp  main.cpp
